--- a/donation.html
+++ b/donation.html
@@ -41,11 +41,7 @@
                 </h3>
             </div>
 
-            <form class="payment">
-                <!-- <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HuySPbPrtDlBdC" async> </script>
-                </script> -->
-               <button ><a href="https://pages.razorpay.com/pl_Kj6qVHanFdEe07/view">Donate</a> </button>
-            </form>
+            <form class="payment"><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Kjm1N7RuDYgyCJ" async> </script> </form>
         </div>
     </div>
 
